# naval

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
examples/: downloading.py  extending_fetch.py  extending_parse.py  extracting_text.py  fetching_data.py  parsing_data.py  register_fetch_class.py  register_parse_class.py  test_examples.py
examples/crawler/: extracting_text.py
samples/: sample_file.html  sample_file.txt  sample_file.xml
source/naval/: crawler.py  sources.py
source/naval/fetch/: bytes_fetch.py  fetch.py  fetch_base.py  file_fetch.py  master_fetch.py  string_fetch.py  web_fetch.py
source/naval/parse/: __init__.py  docx_parse.py  html_parse.py  master_parse.py  parse_base.py  pdf_parse.py  pptx_parse.py  text_parse.py
source/naval/text/: text.py  text_section.py
source/naval/utility/: directories.py  files.py
source/pynavy/crawler/: crawl_base.py  crawler.py  sources.py
src/: pynavy.py
src/crawler/: crawl_base.py
src/crawler/text/: metadata.py
src/pynavy/: __init__.py  pynavy.py
src/pynavy/crawler/: __init__.py  crawl.py  crawl_base.py  crawler.py  sources.py
src/pynavy/utility/: container.py  directories.py  equality.py  files.py  metadata.py  section.py
tests/: __init__.py
tests/unit/: test_crawl_base.py  test_crawler.py  test_sources.py
tests/unit/crawler/: helper.py  test_crawl_base.py  test_crawler.py  test_metadata.py  test_section.py  test_sources.py  test_text.py  test_text_section.py
tests/unit/fetch/: common_tests.py  test_bytes_fetch.py  test_fetch.py  test_fetch_base.py  test_file_fetch.py  test_master_fetch.py  test_string_fetch.py  (+1 more)
(+43 files in other folders)
