[metadata]
name = naval
version = 0.0.0
license = GPL-3.0 License
description = Simple crawler in Python
#long_description = file: README.rst
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com

[options]
packages = find:
package_dir =
    =source
include_package_data = True
#install_requires =
#   <requirement 1>

[options.packages.find]
where=source