[metadata]
name = navaly
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Downloads and extracts text, html from different formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sekgobela-Kevin/naval
project_urls =
    Bug Tracker = https://github.com/Sekgobela-Kevin/naval/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
install_requires =
    urllib3
    requests
    beautifulsoup4
    python-pptx
    python-docx
    PyDocX
    pdfminer.six
python_requires = >=3.6

[options.packages.find]
where = source